--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 				<!-- Content -->
 				<h5 class="text-uppercase">Footer Content</h5>
-				<p>Here you can use rows and columns to organize your footer content.</p>
+				<p>dudinha</p>
 
 			  </div>
 			  <!-- Grid column -->
