--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             height: 100%;
         }
     </style>
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker
+                .register('/sw.js')
+                .then(function() {
+                    console.log("Service Worker Registered");
+                });
+        }
+    </script>
 </head>
 
 <body>
