--- a/criadores.html
+++ b/criadores.html
@@ -43,8 +43,7 @@
         <h2 class="p-3" id="h2formulas">Criadores</h4>
             <br/>
             <img src="img/duda.jpg" alt="Foto" height="200" width="200" class="img-thumbnail" align="right">
-            <div class="container col-8 col-sm-6 col-md-6 col-xl-4 p-3 mt-3" align="right">
-
+            <div class="container col-8 col-sm-6 col-md-6 col-xl-4 p-3 mt-3">
                 <h4>Maria Eduarda Galvão, 17 anos, formada no Centro de Educação Profissional "Tancredo Neves" pelo curso técnico em informática, desenvolvedora e programadora do projeto "Física Já".</h4>
             </div>
     </div>
