--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/estilo.css">
     <style>
-        /* Torn a imagem totalmente responsiva */
+        /* Torna a imagem totalmente responsiva */
         
         .carousel-inner img {
             width: 100%;
@@ -18,6 +18,7 @@
         }
     </style>
     <script>
+        /* pwa */
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker
                 .register('/sw.js')
@@ -105,7 +106,7 @@
     </div>
     <div class="container-fluid col-12 col-sm-12 col-md-12 col-xl-12 p-3 mt-3" id="texto">
         <h2 class=" p-3 mt-3" id="h2formulas">Como surgiu "Física Já"? </h2>
-        <p>
+        <p id="text-conteudo">
             Muitas vezes, os jovens da “geração Z” (pessoas que nasceram após o ano 2.000) encontram grande dificuldade nas disciplinas da área de Exatas. Visando esse fato, a criação do nosso projeto tem o intuito de modificar isso, cooperando para que alunos possam
             aprender de uma forma didática e interessante as matérias de física, porque entendemos que a metodologia como é lecionada a disciplina, pode acabar desinteressando os adolescentes, e para que isso não ocorra, o uso da tecnologia no ambiente
             escolar se torna essencial e cativando-os, podemos garantir um bom desempenho na escola. O site Física Já é especializado em auxiliar estudantes com dificuldades na resolução de fórmulas e cálculos de física, para que possam corrigir e tirar
