--- a/criadores.html
+++ b/criadores.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/fontello.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 
             <img src="img/logo.png" alt="logo" style="width:40px;">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
+				<span class="navbar-toggler-icon"></span>
 			</button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -39,16 +40,35 @@
 
         </nav>
     </div><br/>
+
     <div class="container col-12 col-sm-12 col-md-10 col-xl-10 p-3 mt-3" id="divs">
-        <h2 class="p-3" id="h2formulas">Criadores</h4>
-            <br/>
-            <img src="img/duda.jpg" alt="Foto" height="200" width="200" class="img-thumbnail" align="right">
-            <div class="container col-8 col-sm-6 col-md-6 col-xl-4 p-3 mt-3">
-                <h4>Maria Eduarda Galvão, 17 anos, formada no Centro de Educação Profissional "Tancredo Neves" pelo curso técnico em informática, desenvolvedora e programadora do projeto "Física Já".</h4>
-            </div>
-    </div>
-    <footer class="page-footer font-small blue pt-4 fixed-bottom">
-        <div class="footer-copyright text-center p-2">
+        <!--<h2 class="p-3" id="h2formulas">Criadores</h2>-->
+        <center>
+            <figure>
+                <p><img src="img/duda.jpg" class="m-3" id="img-thumbnail" title="Maria Eduarda Galvão" width="150" height="200" alt="Maria Eduarda Galvão">
+                    <figcaption>
+                        Maria Eduarda Galvão, 17 anos, formada no Centro de Educação Profissional "Tancredo Neves", pelo curso técnico em Informática, desenvolvedora e programadora do projeto "Física Já".<br/><br/>
+                        <span class="icon-facebook"></span> <a href="https://www.facebook.com/meduardagd">Maria Eduarda Galvão</a><br/>
+                        <span class="icon-instagram"></span> <a href="https://www.instagram.com/dugalvao_/">@dugalvao_</a>
+                    </figcaption>
+                </p>
+            </figure>
+        </center><br/>
+        <center>
+            <figure>
+                <p><img src="img/gustavo.jpg" class="m-3" id="img-thumbnail" title="Maria Eduarda Galvão" width="150" height="200" alt="Gustavo Rafael Teixeira">
+                    <figcaption> Gustavo Rafael Teixeira, 17 anos, formado no Centro de Educação Profissional "Tancredo Neves", pelo curso técnico em Informática.<br/><br/>
+                        <span class="icon-facebook"></span> <a href="#">Gustavo Rafael</a><br/>
+                        <span class="icon-instagram"></span> <a href="#">@gustavo</a>
+                    </figcaption>
+                </p>
+            </figure>
+        </center><br/><br/>
+
+
+    </div><br/>
+    <footer class="page-footer font-small blue pt-4 fixed-bottom ">
+        <div class="footer-copyright text-center p-2 ">
             © 2019 Copyright: Física Já
         </div>
     </footer>
@@ -56,9 +76,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="jquery/dist/jquery.js"></script>
-    <script src="popper.js/dist/popper.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="jquery/dist/jquery.js "></script>
+    <script src="popper.js/dist/popper.js "></script>
+    <script src="js/bootstrap.js "></script>
 
 </body>
 
