--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/fontello.css">
     <style>
         /* Torna a imagem totalmente responsiva */
         
@@ -58,8 +59,7 @@
             </div>
 
         </nav>
-    </div><br/>
-
+    </div>
 
     <div id="demo1" class="carousel slide" data-ride="carousel">
 
@@ -104,9 +104,9 @@
         </a>
     </div>
     </div>
-    <div class="container-fluid col-12 col-sm-12 col-md-12 col-xl-12 p-3 mt-3" id="texto">
-        <h2 class=" p-3 mt-3" id="h2formulas">Como surgiu "Física Já"? </h2>
-        <p id="text-conteudo">
+    <div class="container-fluid col-10 col-sm-10 col-md-10 col-xl-10 p-3 mt-3" id="divs-index">
+        <h2 class=" p-3 mt-3" id="h2formulas-index">Como surgiu "Física Já"? </h2>
+        <p id="text-conteudo" style="font-size:large;">
             Muitas vezes, os jovens da “geração Z” (pessoas que nasceram após o ano 2.000) encontram grande dificuldade nas disciplinas da área de Exatas. Visando esse fato, a criação do nosso projeto tem o intuito de modificar isso, cooperando para que alunos possam
             aprender de uma forma didática e interessante as matérias de física, porque entendemos que a metodologia como é lecionada a disciplina, pode acabar desinteressando os adolescentes, e para que isso não ocorra, o uso da tecnologia no ambiente
             escolar se torna essencial e cativando-os, podemos garantir um bom desempenho na escola. O site Física Já é especializado em auxiliar estudantes com dificuldades na resolução de fórmulas e cálculos de física, para que possam corrigir e tirar
@@ -114,21 +114,39 @@
 
         </p>
     </div>
-    <div class="container-fluid col-12 col-sm-12 col-md-12 col-xl-12 p-3 mt-3" id="texto">
-        <h2 class=" p-3 mt-3" id="h2formulas">Resolva suas fórmulas seguindo 4 passos apenas!</h2>
-
-        <p>
-            <h2 id="txtDestaque">Passo 1 </h2> - Cadastre-se e entre em nosso site!
+    <div class="container-fluid col-10 col-sm-10 col-md-10 col-xl-10 p-3 mt-3" id="divs-index">
+        <h2 class=" p-3 mt-3" id="h2formulas-index">Afinal, quem somos? </h2>
+        <p id="text-conteudo" style="font-size:large;">
+            Somos uma plataforma web que tem como principal objetivo resolver fórmulas de física (aplicadas durante o ensino médio), utilizando os dados númericos inseridos.
         </p>
-
-        <p>
-            <h2 id="txtDestaque">Passo 2 </h2> - Encontre a fórmula a qual deseja resolver;</p>
-        <p>
-            <h2 id="txtDestaque">Passo 3</h2> - Escolha a grandeza;</p>
-        <p>
-            <h2 id="txtDestaque"> Passo 4 </h2> - Insira os dados númericos desejados e pronto!</p>
     </div>
-    <br/><br/>
+    <div class="container-fluid col-10 col-sm-10 col-md-10 col-xl-10 p-3 mt-3" id="divs-index">
+        <h2 class=" p-3 mt-3" id="h2formulas-index">Resolva suas fórmulas seguindo apenas quatro passos!</h2>
+        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+            <p style="font-size:large;"></p>
+            <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 1: Cadastre-se e entre em nosso site! </h2>
+            </p>
+        </div>
+        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+            <p style="font-size:large;">
+                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 2: Encontre a fórmula a qual deseja resolver;
+                </h2>
+            </p>
+        </div>
+        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+            <p style="font-size:large;">
+                <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 3: Escolha a grandeza;</h2>
+            </p>
+        </div>
+        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+            <p style="font-size:large;">
+                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 4: Insira os dados númericos desejados e pronto!</h2>
+            </p>
+        </div>
+    </div>
+    </div>
+
+    <br/><br/><br/>
     <!-- Footer -->
     <footer class="page-footer font-small blue pt-4 fixed-bottom">
         <div class="footer-copyright text-center p-2">
