--- a/index.html
+++ b/index.html
@@ -17,22 +17,26 @@
             width: 100%;
             height: 100%;
         }
+        
+        .slider {
+            height: 400px;
+        }
     </style>
     <script>
         /* pwa */
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker
-                .register('/sw.js')
-                .then(function() {
-                    console.log("Service Worker Registered");
-                });
-        }
+        /* if ('serviceWorker' in navigator) {
+             navigator.serviceWorker
+                 .register('/sw.js')
+                 .then(function() {
+                     console.log("Service Worker Registered");
+                 });
+         }*/
     </script>
 </head>
 
 <body>
 
-    <div class="container-fluid col-10 col-sm-10 col-md-10 col-xl-10 p-3 mt-3">
+    <div class="container-fluid col-12 col-sm-12 col-md-12 col-xl-12 ">
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="menu">
             <!-- Brand -->
 
@@ -60,41 +64,41 @@
 
         </nav>
     </div>
+    <div class="container col-6 col-sm-12 col-md-12 col-xl-12 p-1">
+        <div id="demo1" class="carousel slide" data-ride="carousel">
 
-    <div id="demo1" class="carousel slide" data-ride="carousel">
+            <!-- Indicadores -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
 
-        <!-- Indicadores -->
-        <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-
-        <!-- O slideshow -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/fundo_alta_qualidade.jpg" alt="Los Angeles" width="1100" height="500" style=" opacity: 0.7;">
-                <div class="carousel-caption">
-                    <h3>Bem vindo!</h3>
-                    <p>Welcome!</p>
+            <!-- O slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/notebook2.jpg" alt="Notebook" width="960" height="360" style=" opacity: 0.7;">
+                    <div class="carousel-caption">
+                        <h3>Bem vindo!</h3>
+                        <p>Welcome!</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="img/fundo_alta_qualidade.jpg" alt="Chicago" width="1100" height="500" style=" opacity: 0.7;">
-                <div class="carousel-caption">
-                    <h3>Cadastre-se</h3>
-                    <p>e tenha acesso às fórmulas</p>
+                <div class="carousel-item">
+                    <img src="img/smartphone2.jpg" alt="Celular" width="960" height="360" style=" opacity: 0.7;">
+                    <div class="carousel-caption">
+                        <h3>Cadastre-se</h3>
+                        <p>e tenha acesso às fórmulas</p>
+                    </div>
                 </div>
-            </div>
-            <div class="carousel-item">
-                <img src="img/fundo_alta_qualidade.jpg" alt="New York" width="1100" height="500" style=" opacity: 0.7;">
-                <div class="carousel-caption">
-                    <h3>Bom estudo!</h3>
-                    <p>Volte sempre!</p>
+                <div class="carousel-item">
+                    <img src="img/ipad2.jpg" alt="iPad" width="960" height="360" style=" opacity: 0.7;">
+                    <div class="carousel-caption">
+                        <h3>Bom estudo!</h3>
+                        <p>Volte sempre!</p>
+                    </div>
                 </div>
             </div>
         </div>
-
         <!-- Controles esquerdo e direito -->
         <a class="carousel-control-prev" href="#demo1" data-slide="prev">
             <span class="carousel-control-prev-icon"></span>
@@ -122,25 +126,25 @@
     </div>
     <div class="container-fluid col-10 col-sm-10 col-md-10 col-xl-10 p-3 mt-3" id="divs-index">
         <h2 class=" p-3 mt-3" id="h2formulas-index">Resolva suas fórmulas seguindo apenas quatro passos!</h2>
-        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+        <div class="container-fluid col-8 col-sm-8 col-md-8 col-xl-8 p-3 mt-3" id="topicos">
             <p style="font-size:large;"></p>
-            <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 1: Cadastre-se e entre em nosso site! </h2>
+            <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 1: cadastre-se e entre em nosso site! </h2>
             </p>
         </div>
-        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+        <div class="container-fluid col-8 col-sm-8 col-md-8 col-xl-8 p-3 mt-3" id="topicos">
             <p style="font-size:large;">
-                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 2: Encontre a fórmula a qual deseja resolver;
+                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 2: encontre a fórmula a qual deseja resolver;
                 </h2>
             </p>
         </div>
-        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+        <div class="container-fluid col-8 col-sm-8 col-md-8 col-xl-8 p-3 mt-3" id="topicos">
             <p style="font-size:large;">
-                <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 3: Escolha a grandeza;</h2>
+                <h2 id="txtDestaque"><span class="icon-ok"></span>Passo 3: escolha a grandeza;</h2>
             </p>
         </div>
-        <div class="container-fluid col-6 col-sm-6 col-md-6 col-xl-6 p-3 mt-3" id="topicos">
+        <div class="container-fluid col-8 col-sm-8 col-md-8 col-xl-8 p-3 mt-3" id="topicos">
             <p style="font-size:large;">
-                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 4: Insira os dados númericos desejados e pronto!</h2>
+                <h2 id="txtDestaque"><span class="icon-ok"></span> Passo 4: insira os dados númericos desejados e pronto!</h2>
             </p>
         </div>
     </div>
